Bug 254246 - Registration of kolab account fails
Summary: Registration of kolab account fails
Status: CLOSED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-15 11:49 UTC by Felix Wolfsteller
Modified: 2010-10-25 10:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-10-15 11:49:37 UTC
In version 4:4.5~20101014.1185761-1maemo1.1185672 , when Adding a Kolab account, I stumbled into "Failed to set up account."s (after 33% of the progress bar?).

A click on details show:
(i) Creating resource instance for 'Kolab Groupware Server'...
(v) Resource setup completed.
(i) Setting up identity...
Now it becomes difficult to scroll (scroll in scroll)
(v) Identity set up.
(i) Creating resource instance for 'IMAP E-Mail Server'
(i) Configureing resource instance...
(x) Could not convert value of setting 'AccountIdentity to required type.
(i) Removed resource instalnce for 'Kolab Groupware Server'.
(i) Identity removed.
(i) Removed resource instance for 'IMAP E-Mail Server'
(i) Creating resource instance for 'IMAP E-Mail Server'
(i) Configuring resource instance...

OK, here I realized that this might be output from consequent trials (the pattern goes on).
Comment 1 Volker Krause 2010-10-15 13:05:20 UTC
SVN commit 1186199 by vkrause:

use the default session bus in the main thread, breaks legacy resources
that still assume to be registered there otherwise

BUG: 254246


 M  +4 -0      dbusconnectionpool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186199
Comment 2 Felix Wolfsteller 2010-10-25 10:11:35 UTC
Works in 4:4.6~20101025.1189387-1maemo1.1188357 , closing.