use the default session bus in the main thread, breaks legacy resources that still assume to be registered there otherwise

BUG: 254246

svn path=/trunk/KDE/kdepimlibs/; revision=1186199